# pizeroschool

./: README.md
heapstack/: CMakeLists.txt
heapstack/src/: CMakeLists.txt  heap.c  stack.c
helloworld/: CMakeLists.txt
helloworld/src/: CMakeLists.txt  main.cpp
stdio/level1/: CMakeLists.txt
stdio/level1/lib/: CMakeLists.txt  greetings.cpp  greetings.h
stdio/level1/src/: CMakeLists.txt  main.cpp
stdio/level2/: CMakeLists.txt
stdio/level2/lib/: CMakeLists.txt  greetings.cpp  greetings.h
stdio/level2/src/: CMakeLists.txt  main1.cpp  main2.cpp  main3.cpp
stdio/main/: CMakeLists.txt
stdio/main/src/: CMakeLists.txt  main.c  main.cpp
zeroblink/: .gitignore  CMakeLists.txt
zeroblink/src/: CMakeLists.txt  main.c
